<resources>
    <string name="app_name">Expanse RPG Sheet</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="placeholder">Placeholder</string>
    <string name="number_placeholder">0</string>

    <string name="hint_name">Character name</string>
    <string name="hint_max_fortune">Max fortune</string>
    <string name="hint_current_fortune">Current fortune</string>
    <string name="label_max_fortune">Max Fortune:</string>
    <string name="label_initiative">Initiative:</string>
    <string name="entry_initiative">Set character\'s initiative:</string>

    <string name="name">Name</string>

    <string name="accuracy">Accuracy</string>
    <string name="communication">Communication</string>
    <string name="constitution">Constitution</string>
    <string name="dexterity">Dexterity</string>
    <string name="fighting">Fighting</string>
    <string name="intelligence">Intelligence</string>
    <string name="perception">Perception</string>
    <string name="strength">Strength</string>
    <string name="willpower">Willpower</string>

    <string name="armor">Armor</string>
    <string name="none">None</string>
    <string name="padding">Padding</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="heavy">Heavy</string>
    <string name="power">Power</string>

    <string name="accuracy_abbreviated_interpolated">ACR: %d</string>
    <string name="communication_abbreviated_interpolated">COM: %d</string>
    <string name="constitution_abbreviated_interpolated">CON: %d</string>
    <string name="dexterity_abbreviated_interpolated">DEX: %d</string>
    <string name="fighting_abbreviated_interpolated">FTN: %d</string>
    <string name="intelligence_abbreviated_interpolated">INT: %d</string>
    <string name="perception_abbreviated_interpolated">PER: %d</string>
    <string name="strength_abbreviated_interpolated">STR: %d</string>
    <string name="willpower_abbreviated_interpolated">WIL: %d</string>

    <string name="defense_interpolated">Defense: %d</string>
    <string name="toughness_interpolated">Toughness: %d</string>
    <string name="initiative_interpolated">Initiative: %d</string>
    <string name="max_fortune_interpolated">Max Fortune: %d</string>

    <string name="conditions">Conditions</string>
    <string name="injured">Injured</string>
    <string name="wounded">Wounded</string>
    <string name="taken_out">Taken out</string>

    <string name="characters">Characters</string>
    <string name="encounter">Encounter</string>

    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="add_encounter">Add to encounter</string>
    <string name="delete">Delete</string>
    <string name="clear_all">Clear all</string>

    <string name="character_already_in_encounter">Character has already been added to encounter.</string>
    <string name="character_added_encounter">Character added to encounter!</string>

    <string name="text_input_error">%s is required!</string>

    <string name="desc_btn_options">Options buttons</string>
</resources>
