<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_conditions_collapsible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="4dp"
            android:text="@string/conditions"
            android:textColor="@color/colorIcon"
            app:icon="@drawable/ic_expand_less_24dp"
            app:iconTint="@color/colorIcon" />

    <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_conditions"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" >

        <com.google.android.material.chip.Chip
                android:id="@+id/chip_injured"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/injured"
                app:chipBackgroundColor="@color/colorPrimaryLight"/>

        <com.google.android.material.chip.Chip
                android:id="@+id/chip_wounded"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wounded"
                app:chipBackgroundColor="@color/colorPrimaryLight"/>

        <com.google.android.material.chip.Chip
                android:id="@+id/chip_taken_out"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/taken_out"
                app:chipBackgroundColor="@color/colorPrimaryLight"/>

    </com.google.android.material.chip.ChipGroup>

</LinearLayout>