<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_encounter_character_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/layout_encounter_fortune_adjustment"
            android:text="@string/placeholder"
            android:textAlignment="center"
            android:textSize="@dimen/textSizeH4"/>

    <View
            android:id="@+id/view_divider_name_subtext"
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/text_encounter_character_name"
            app:layout_constraintEnd_toEndOf="@id/layout_encounter_fortune_adjustment"
            android:background="@color/colorPrimary"/>

    <TextView android:id="@+id/text_encounter_initiative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view_divider_name_subtext"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/initiative_interpolated"/>

    <TextView android:id="@+id/text_encounter_max_fortune"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_encounter_initiative"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/max_fortune_interpolated"/>

    <include layout="@layout/layout_attributes_small"
            android:id="@+id/layout_encounter_attributes_small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/layout_encounter_fortune_adjustment"
            app:layout_constraintEnd_toEndOf="parent"/>


    <include layout="@layout/layout_fortune_adjustment"
            android:id="@+id/layout_encounter_fortune_adjustment"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/text_encounter_max_fortune"
            app:layout_constraintStart_toStartOf="parent"/>

    <include layout="@layout/layout_collapsible_conditions"
            android:id="@+id/layout_encounter_conditions"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/layout_encounter_fortune_adjustment" />

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/layout_encounter_conditions"/>

</androidx.constraintlayout.widget.ConstraintLayout>